// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container Component renders a large icon 1`] = `
<svg
  class="c-icon c-icon--large"
  height="16"
  viewBox="0 0 16 16"
  width="16"
>
  <path
    d="M0.939 0.939c0.586-0.586 1.536-0.586 2.121 0l4.939 4.939 4.939-4.939c0.586-0.586 1.536-0.586 2.121 0s0.586 1.536 0 2.121l-4.939 4.939 4.939 4.939c0.586 0.586 0.586 1.536 0 2.121s-1.536 0.586-2.121 0l-4.939-4.939-4.939 4.939c-0.586 0.586-1.536 0.586-2.121 0s-0.586-1.536 0-2.121l4.939-4.939-4.939-4.939c-0.586-0.586-0.586-1.536 0-2.121z"
  />
</svg>
`;

exports[`Container Component renders a small icon 1`] = `
<svg
  class="c-icon c-icon--small"
  height="16"
  viewBox="0 0 16 16"
  width="16"
>
  <path
    d="M0.939 0.939c0.586-0.586 1.536-0.586 2.121 0l4.939 4.939 4.939-4.939c0.586-0.586 1.536-0.586 2.121 0s0.586 1.536 0 2.121l-4.939 4.939 4.939 4.939c0.586 0.586 0.586 1.536 0 2.121s-1.536 0.586-2.121 0l-4.939-4.939-4.939 4.939c-0.586 0.586-1.536 0.586-2.121 0s-0.586-1.536 0-2.121l4.939-4.939-4.939-4.939c-0.586-0.586-0.586-1.536 0-2.121z"
  />
</svg>
`;

exports[`Container Component renders an icon 1`] = `
<svg
  class="c-icon"
  height="16"
  viewBox="0 0 16 16"
  width="16"
>
  <path
    d="M0.939 0.939c0.586-0.586 1.536-0.586 2.121 0l4.939 4.939 4.939-4.939c0.586-0.586 1.536-0.586 2.121 0s0.586 1.536 0 2.121l-4.939 4.939 4.939 4.939c0.586 0.586 0.586 1.536 0 2.121s-1.536 0.586-2.121 0l-4.939-4.939-4.939 4.939c-0.586 0.586-1.536 0.586-2.121 0s-0.586-1.536 0-2.121l4.939-4.939-4.939-4.939c-0.586-0.586-0.586-1.536 0-2.121z"
  />
</svg>
`;

exports[`Container Component renders an icon with the primary colour 1`] = `
<svg
  class="c-icon c-icon--primary__close"
  height="16"
  viewBox="0 0 16 16"
  width="16"
>
  <path
    d="M0.939 0.939c0.586-0.586 1.536-0.586 2.121 0l4.939 4.939 4.939-4.939c0.586-0.586 1.536-0.586 2.121 0s0.586 1.536 0 2.121l-4.939 4.939 4.939 4.939c0.586 0.586 0.586 1.536 0 2.121s-1.536 0.586-2.121 0l-4.939-4.939-4.939 4.939c-0.586 0.586-1.536 0.586-2.121 0s-0.586-1.536 0-2.121l4.939-4.939-4.939-4.939c-0.586-0.586-0.586-1.536 0-2.121z"
  />
</svg>
`;

exports[`Container Component renders an icon with the secondary colour 1`] = `
<svg
  class="c-icon c-icon--secondary__close"
  height="16"
  viewBox="0 0 16 16"
  width="16"
>
  <path
    d="M0.939 0.939c0.586-0.586 1.536-0.586 2.121 0l4.939 4.939 4.939-4.939c0.586-0.586 1.536-0.586 2.121 0s0.586 1.536 0 2.121l-4.939 4.939 4.939 4.939c0.586 0.586 0.586 1.536 0 2.121s-1.536 0.586-2.121 0l-4.939-4.939-4.939 4.939c-0.586 0.586-1.536 0.586-2.121 0s-0.586-1.536 0-2.121l4.939-4.939-4.939-4.939c-0.586-0.586-0.586-1.536 0-2.121z"
  />
</svg>
`;
